Prevent overflow for auth screen

--- a/src/styles/pages/_auth.scss
+++ b/src/styles/pages/_auth.scss
@@ -4,7 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	width: 100vw;
-	min-height: 100vh;
+	height: 100vh;
 	overflow: hidden;
 	background: rgba(0, 0, 0, 0.5);
 	z-index: 1;
@@ -443,6 +443,6 @@
 
 .fancy-canvas {
 	position: fixed;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 }
